16-securite/a-networkpolicies/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  namespace: stu_NUMBER_  
spec:
  selector:
    matchLabels:
      tiers: db
  template:
    metadata:
      labels:
        tiers: db
    spec:
      containers:
      - name: mongo-db
        image: mongo:7.0.4
        ports:
        - containerPort: 27017
