16-securite/a-networkpolicies/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: _PRENOM_  
spec:
  selector:
    matchLabels:
      tiers: frontend
  template:
    metadata:
      labels:
        tiers: frontend
    spec:
      containers:
      - name: frontend-container
        image: fgtech/frontend-todolist:stu_NUMBER_
        imagePullPolicy: Always
        ports:
        - containerPort: 81
