16-securite/a-networkpolicies/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace:   
spec:
  type: ClusterIP
  selector:
    tiers: db
  ports:
  - port: 27017
    targetPort: 27017
