16-securite/a-networkpolicies/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace:   
spec:
  type: ClusterIP
  selector:
    tiers: frontend
  ports:
  - port: 80
    targetPort: 81
