16-securite/a-networkpolicies/backend-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-networkpolicy
  namespace: <prenom>
spec:
  # A définir au strict minimum
