16-securite/a-networkpolicies/db-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-networkpolicy
  namespace: stu_NUMBER_
spec:
  # A définir au strict minimum
