16-securite/a-networkpolicies/default-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-networkpolicy
  namespace: _PRENOM_
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
# Autorise l'accés au server DNS de Kubernetes (coredns)  
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
