16-securite/a-networkpolicies/frontend-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-networkpolicy
  namespace: stu_NUMBER_
spec:
  # A définir au strict minimum
